# pybis2spice

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: IBIS_to_SPICE_notebook.html  readme.txt
examples/: sn74lvc2t45.ibs  stm32g031_041_ufqfpn32.ibs
examples/Analog_Devices_LTC2879/: RS485_3.3v-Output-FastStrong.asy  RS485_3.3v-Output-Typical.asy  ltc2879x_33.asc  ltc2879x_33.op.raw  ltc2879x_33.raw
examples/NXP_HCT1G08/: HCT1G08_IN_50-Input-FastStrong.asy  HCT1G08_IN_50-Input-WeakSlow.sub  HCT1G08_OUTN_50-Output-FastStrong.asy  HCT1G08_OUTN_50-Output-FastStrong.sub  HCT1G08_OUTN_50-Output-Typical.sub
examples/NXP_LVC2G126/: LVC_XGAHTRISTN_33-Output-Typical.sub  LVC_XGAHTRISTN_33-Output-WeakSlow.asy  LVC_XGIN_33-Input-FastStrong.sub  LVC_XGIN_33-Input-Typical.asy  LVC_XGIN_33-Input-WeakSlow.asy  lvc2g126_33.asc
examples/Nexperia_LVC1G07/: LVC1G07.asc  LVC1G07.op.raw  LVC1G07_XGIN_33-Input-FastStrong.asy  LVC1G07_XGIN_33-Input-FastStrong.sub  LVC1G07_XGIN_33-Input-Typical.asy  LVC1G07_XGIN_33-Input-Typical.sub  LVC1G07_XGIN_33-Input-WeakSlow.asy  LVC1G07_XGODN_33-Output-FastStrong.asy  LVC1G07_XGODN_33-Output-FastStrong.sub  LVC1G07_XGODN_33-Output-Typical.asy  LVC1G07_XGODN_33-Output-Typical.sub  LVC1G07_XGODN_33-Output-WeakSlow.asy  (+1 more)
gui/: build-mac.py  build-win.py  build.py  icon.py  img.py  pybis2spice-cli.py  pybis2spice-gui.py
notebooks/: jupyter_lab.bat  pybis2spice_development.ipynb  pybis2spice_lvc.ipynb  pybis2spice_stm32.ipynb
pybis2spice/: plot.py  pybis2spice.py  subcircuit.py  version.py  version.txt
test/: scratch.py  test_pybis2spice.py
(+27 files in other folders)
