[project]
name="pybis2spice"
dynamic = ["version"]
dependencies = [
    "ecdtools",
    "numpy",
    "matplotlib"
    ]
requires-python = ">=3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
gui=[
    "tkinter-tooltip"
    ]
build=["pyinstaller"]