[project]
name="pybis2spice"
version="1.3.0-dev"
dependencies = [
    "ecdtools",
    "numpy",
    "matplotlib"
    ]
requires-python = ">=3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
gui=[
    "tkinter-tooltip"
    ]
build=["pyinstaller"]